cmake_minimum_required(VERSION 3.0.0)
project(cs-cpp VERSION 0.1.0)

add_executable(cs-cpp
  src/main.cpp

  src/algorithms/Binary_Search.hpp

  src/data-structures/Binary_Tree.hpp
  src/data-structures/BST.hpp
  src/data-structures/Heap.hpp
  src/data-structures/Queue.hpp
  src/data-structures/Stack.hpp

  src/data-structures/Binary_Tree.hpp
  src/data-structures/BST.hpp
  src/data-structures/Heap.hpp
  src/data-structures/Queue.hpp
  src/data-structures/Stack.hpp

  src/sorting/Bubble.hpp
  src/sorting/Counting.hpp
  src/sorting/Heap.hpp
  src/sorting/Insertion.hpp
  src/sorting/Merge.hpp
  src/sorting/Quick.hpp
  src/sorting/Selection.hpp

  src/tests.hpp
)